[tool.poetry]
name = "morpheme"
version = "0.1.0"
packages = [{include = "morpheme"}]  # Add this if missing!
description = ""
authors = ["jinijinjaney <liezyljaneclaros22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
gunicorn = "^20.0"
opencv-python-headless = "^4.9.0.80"  # ✅ Add this line

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
