[tool.poetry]
name = "morpheme"
version = "0.1.0"
packages = [{include = "morpheme"}]  # Add this if missing!
description = ""
authors = ["jinijinjaney <liezyljaneclaros22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
gunicorn = "^20.0"
numpy = "^1.21.0"  # Compatible with Python 3.8
opencv-python-headless = "^4.7.0.72"  # Compatible with numpy 1.21.x
dlib = "^19.24.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
